form not working

--- a/src/app/core/pages/menu/menu.component.html
+++ b/src/app/core/pages/menu/menu.component.html
@@ -1,4 +1,5 @@
 <ul>
     <a routerLink='/'>Home</a>
     <a routerLink='/digimons'>Digimons</a>
+    <a routerLink='/add-digimons'>Add Digimons</a>
 </ul>
