--- a/src/app/core/pages/menu/menu.component.scss
+++ b/src/app/core/pages/menu/menu.component.scss
@@ -1,10 +1,11 @@
 ul{
     a{
-        padding: 10px;
+        padding: 30px;
         text-decoration: none;
         font-weight: 1000;
         font-size: 5rem;
         text-transform: uppercase;
-        color: white;
+        color: rgb(76, 195, 241);
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
 }
