--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,3 +1,6 @@
 h1{
     text-align: center;
+    color: rgb(76, 195, 241);
+    text-transform: uppercase;
+    border-bottom: 5px solid rgb(76, 195, 241);
 }
