--- a/src/app/pages/add-digimon-page/add-digimon-page.component.html
+++ b/src/app/pages/add-digimon-page/add-digimon-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addDigimon()" (ngSubmit)="addDigimon()">
+<form [formGroup]="addDigimonForm" (ngSubmit)="addDigimon()">
     <label for="name">Name</label>
     <input id="name" type="text" formControlName="name">
 
@@ -8,7 +8,7 @@
     </select>
 
     <label for="img">Image</label>
-    <input id="img" type="file" formControlName="img">
-
+    <input id="img" type="file" formControlName="img" (change)="preview($event)">
+    <img *ngIf="imageUrl" src="{{imgUrl}}" alt="preview">
     <button>Guardar</button>
 </form> 
